[gd_scene load_steps=18 format=3 uid="uid://3kqjgake2c7k"]

[ext_resource type="Script" path="res://scripts/seccion6.gd" id="1_tp1pa"]
[ext_resource type="Texture2D" uid="uid://ckjpvnxx6mlxs" path="res://Imagenes/seccion6/seccion6.png" id="2_pcoug"]
[ext_resource type="Texture2D" uid="uid://c125ntm1cehvk" path="res://Imagenes/cvar.-imprimir-inicio.png" id="3_i1wyd"]
[ext_resource type="PackedScene" uid="uid://b7jonfd41k68h" path="res://Escenas/cuadro_dialogo.tscn" id="3_i68o0"]
[ext_resource type="Texture2D" uid="uid://bkxy5qbmsejs0" path="res://Imagenes/seccion6/actualizarCv.png" id="4_mhuds"]
[ext_resource type="Texture2D" uid="uid://b3ol41ndrpmjv" path="res://Imagenes/seccion6/visualizarCv.png" id="6_7wukv"]
[ext_resource type="Texture2D" uid="uid://dfpkuvh2npfoc" path="res://Imagenes/seccion6/screen.png" id="6_gfhw3"]
[ext_resource type="Texture2D" uid="uid://wp0wt27hki5j" path="res://Imagenes/seccion6/imprimir cv.png" id="7_6ey2f"]
[ext_resource type="PackedScene" uid="uid://27d4ixo8lm6y" path="res://Escenas/pausa.tscn" id="9_nqxoc"]
[ext_resource type="PackedScene" uid="uid://cbp86ksvxsnrj" path="res://Escenas/logro/logro.tscn" id="10_nb7o1"]

[sub_resource type="Animation" id="Animation_yvi5q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_n5doa"]
resource_name = "deslizar"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1280, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"eliminar_login"
}]
}

[sub_resource type="Animation" id="Animation_fg6d5"]
resource_name = "deslizar2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1280, 0), Vector2(-2560, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"eliminar_inicio"
}]
}

[sub_resource type="Animation" id="Animation_qam0t"]
resource_name = "deslizar3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2560, 0), Vector2(-3840, 0)]
}

[sub_resource type="Animation" id="Animation_73knj"]
resource_name = "deslizar4"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3840, 0), Vector2(-5120, 0)]
}

[sub_resource type="Animation" id="Animation_dn3br"]
resource_name = "deslizar5"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5120, 0), Vector2(-6400, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1sflf"]
_data = {
"RESET": SubResource("Animation_yvi5q"),
"deslizar": SubResource("Animation_n5doa"),
"deslizar2": SubResource("Animation_fg6d5"),
"deslizar3": SubResource("Animation_qam0t"),
"deslizar4": SubResource("Animation_73knj"),
"deslizar5": SubResource("Animation_dn3br")
}

[node name="seccion6" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tp1pa")

[node name="Node2D" type="Node2D" parent="."]

[node name="TextureRect4" type="TextureRect" parent="Node2D"]
offset_left = 3840.0
offset_right = 5326.0
offset_bottom = 766.0
texture = ExtResource("6_7wukv")

[node name="Label" type="Label" parent="Node2D/TextureRect4"]
layout_mode = 0
offset_left = 1160.0
offset_top = 313.0
offset_right = 1221.0
offset_bottom = 339.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Usuario"

[node name="Label2" type="Label" parent="Node2D/TextureRect4"]
layout_mode = 0
offset_left = 450.0
offset_top = 360.0
offset_right = 1260.0
offset_bottom = 460.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Rastreador Ícaro Junior Criptidos de aviación instrucciones fuerte en Estudio mi es el Instituto seguir."

[node name="TextureRect2" type="TextureRect" parent="Node2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1280.0
offset_right = 4347.0
offset_bottom = 1212.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.417357, 0.594097)
texture = ExtResource("3_i1wyd")

[node name="Button" type="Button" parent="Node2D/TextureRect2"]
layout_mode = 0
offset_left = 647.0
offset_top = 648.0
offset_right = 827.0
offset_bottom = 673.0
flat = true

[node name="TextureRect" type="TextureRect" parent="Node2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3067.0
offset_bottom = 1212.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.417357, 0.594097)
texture = ExtResource("2_pcoug")

[node name="TextureRect3" type="TextureRect" parent="Node2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2560.0
offset_right = 5627.0
offset_bottom = 1212.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.417357, 0.594097)
texture = ExtResource("4_mhuds")

[node name="recargar" type="Button" parent="Node2D/TextureRect3"]
layout_mode = 0
offset_left = 1102.0
offset_top = 555.0
offset_right = 1498.0
offset_bottom = 580.0
flat = true

[node name="visualizar" type="Button" parent="Node2D/TextureRect3"]
layout_mode = 0
offset_left = 1119.0
offset_top = 714.0
offset_right = 1629.0
offset_bottom = 739.0
disabled = true
flat = true

[node name="ColorRect" type="ColorRect" parent="Node2D/TextureRect3"]
visible = false
layout_mode = 0
offset_left = 1282.0
offset_top = 631.0
offset_right = 1977.0
offset_bottom = 671.0
color = Color(0, 0.839216, 0, 0.258824)

[node name="Label" type="Label" parent="Node2D/TextureRect3/ColorRect"]
layout_mode = 0
offset_left = 35.8179
offset_top = 8.62622
offset_right = 294.818
offset_bottom = 34.6262
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Curriculum Generado en 1000 ms"

[node name="TextureRect5" type="TextureRect" parent="Node2D"]
offset_left = 5120.0
offset_right = 6399.0
offset_bottom = 721.0
texture = ExtResource("6_gfhw3")

[node name="TextureRect6" type="TextureRect" parent="Node2D"]
offset_left = 6405.0
offset_right = 7740.0
offset_bottom = 725.0
texture = ExtResource("7_6ey2f")

[node name="imprimir" type="Button" parent="Node2D/TextureRect6"]
layout_mode = 0
offset_left = 550.0
offset_top = 190.0
offset_right = 690.0
offset_bottom = 230.0
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1sflf")
}

[node name="CuadroDialogo" parent="." instance=ExtResource("3_i68o0")]
layout_mode = 1
offset_left = -669.0
offset_top = -341.0
offset_right = 705.0
offset_bottom = 19.0
metadata/_edit_horizontal_guides_ = [420.0]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = 6.0

[node name="Pausa" parent="." instance=ExtResource("9_nqxoc")]
layout_mode = 1

[node name="Logro" parent="." instance=ExtResource("10_nb7o1")]
layout_mode = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="Node2D/TextureRect2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Node2D/TextureRect3/recargar" to="." method="_on_recargar_pressed"]
[connection signal="pressed" from="Node2D/TextureRect3/visualizar" to="." method="_on_visualizar_pressed"]
[connection signal="pressed" from="Node2D/TextureRect6/imprimir" to="." method="_on_imprimir_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
